[gd_scene load_steps=13 format=3 uid="uid://cqfdrradaqs68"]

[ext_resource type="Script" uid="uid://p6a3brkbqi5o" path="res://scenes/enemies/drone.gd" id="1_y3ws1"]
[ext_resource type="Texture2D" uid="uid://b2li8uwxkkgfj" path="res://graphics/enemies/drone.png" id="2_dyfay"]
[ext_resource type="Shader" uid="uid://bv0mcscax7m1o" path="res://scenes/enemies/drone.gdshader" id="2_xgp3v"]
[ext_resource type="Texture2D" uid="uid://bf0w47jkdwkqa" path="res://graphics/explosions/explosion_3.png" id="3_dyfay"]
[ext_resource type="AudioStream" uid="uid://bi7n4lkws4hrg" path="res://audio/explosion.wav" id="5_cq5ml"]
[ext_resource type="AudioStream" uid="uid://c3haio2sej35o" path="res://audio/solid_impact.ogg" id="5_lt60k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lt60k"]
shader = ExtResource("2_xgp3v")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xgp3v"]
radius = 80.5047

[sub_resource type="CircleShape2D" id="CircleShape2D_y3ws1"]
radius = 1309.37

[sub_resource type="Animation" id="Animation_lt60k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xgp3v"]
resource_name = "explosion"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_movement"
}]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplosionSound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_cq5ml")
}],
"times": PackedFloat32Array(0.5)
}
tracks/5/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lt60k"]
_data = {
&"RESET": SubResource("Animation_lt60k"),
&"explosion": SubResource("Animation_xgp3v")
}

[node name="drone" type="CharacterBody2D" groups=["Entity"]]
rotation = 3.14159
collision_layer = 2
collision_mask = 15
script = ExtResource("1_y3ws1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lt60k")
rotation = 1.5708
texture = ExtResource("2_dyfay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xgp3v")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_y3ws1")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_dyfay")
hframes = 8
vframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lt60k")
}

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
rotation = -3.14159
stream = ExtResource("5_lt60k")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
rotation = -3.14159
volume_db = 10.0

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
